- processdialog, minimize or show on taskbar. Going to desktop fails now
- add option in action builder to popup dialog for field values (fill in at runtime)
- add log templates
- add proxy support (Core data and accessible by plugins)
- add option to set the logcount for GPX export
- add tooltip for counters in main screen

V1.9.13.0
- change: Updated GAPP SF V0.0.21 (Preview, requires .NET 4.5.1)

V1.9.12.0

- fix: GPX export, the Waypoint has now the description field if it has a description
- change: Updated GAPP SF V0.0.20 (Preview, requires .NET 4.5.1)

V1.9.11.0

- change: Geocache description and log text are not persistent in memory when loaded from database (smaller foot print)
- add: Action Builder now contains a filter for text in the geocache description (optionally a regular expression)
- change: Updated GAPP SF V0.0.19 (Preview, requires .NET 4.5.1)

V1.9.10.0

- fix: Extracting immage urls from geocache description
- add: restore GAPP application settings now also restores GAPP SF settings
- add: GAPP SF V0.0.17 Preview added to setup (requires .NET 4.5.1)

V1.9.9.0

- fix: Google maps, setting text for show geocache name
- fix: Get logs of others users now works also if you select a specific user instead of all users.
- fix: Import Munzee now handles munzee captured multiple times by user correctly
- change: Shapefile setting now has option to overwrite dbf encoding (default utf-8)

V1.9.8.0

- fix: Sql Server storage plugin fix for saving the Longitude value of custom coords
- fix: Google maps, IE 11 compatibility updated jquery and added  http-equiv=X-UA-Compatible content=IE=9 to html pages

V1.9.7.0

- change: French language updated (thanks icaunais and RHCV)
- add: Search window now has option to filter on geocache status
- change: When creating a new database, the new files are automatically saved.
- add: New import plugin, import GCComments
- add: Cache list now contains a Coordinate column