@@ -1618,4 +1618,10 @@ This wizard will guide you through the initial setup. Before you start, you migh
   <data name="ImportingOpencachingLogs" xml:space="preserve">
     <value>Importing opencaching logs</value>
   </data>
+  <data name="GetCity" xml:space="preserve">
+    <value>Get city</value>
+  </data>
+  <data name="PerfomingAction" xml:space="preserve">
+    <value>Perfoming action</value>
+  </data>
 </root>
